crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__remove_constraint__tests__remove_constraint_foreign_key_without_name@remove_foreign_key_without_name_Postgres.snap
---
source: crates/vespertide-query/src/sql/remove_constraint.rs
expression: sql
---
ALTER TABLE "posts" DROP CONSTRAINT "fk_posts__user_id"
