crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__remove_constraint__tests__remove_constraint_foreign_key_without_name@remove_foreign_key_without_name_Sqlite.snap
---
source: crates/vespertide-query/src/sql/remove_constraint.rs
expression: sql
---
CREATE TABLE "posts_temp" ( "id" integer NOT NULL, "user_id" integer )
INSERT INTO "posts_temp" ("id", "user_id") SELECT "id", "user_id" FROM "posts"
DROP TABLE "posts"
ALTER TABLE "posts_temp" RENAME TO "posts"
