crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__remove_constraint__tests__remove_constraint_index_with_custom_inline_name@remove_index_custom_name_Postgres.snap
---
source: crates/vespertide-query/src/sql/remove_constraint.rs
expression: sql
---
DROP INDEX "ix_users__custom_idx_email"
