crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__remove_constraint__tests__remove_constraint_primary_key_with_index@remove_primary_key_with_index_remove_primary_key_with_index_sqlite.snap
---
source: crates/vespertide-query/src/sql/remove_constraint.rs
expression: sql
---
CREATE TABLE "users_temp" ( "id" integer NOT NULL )
INSERT INTO "users_temp" ("id") SELECT "id" FROM "users"
DROP TABLE "users"
ALTER TABLE "users_temp" RENAME TO "users"
CREATE INDEX "idx_id" ON "users" ("id")
