crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__remove_constraint__tests__remove_constraint_primary_key_with_unique_constraint@remove_primary_key_with_unique_constraint_Sqlite.snap
---
source: crates/vespertide-query/src/sql/remove_constraint.rs
expression: sql
---
CREATE TABLE "users_temp" ( "id" integer NOT NULL )
INSERT INTO "users_temp" ("id") SELECT "id" FROM "users"
DROP TABLE "users"
ALTER TABLE "users_temp" RENAME TO "users"
CREATE UNIQUE INDEX "uq_users__uq_email" ON "users" ("email")
