crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__remove_constraint__tests__remove_constraint_primary_key_with_unique_index@remove_primary_key_with_unique_index_remove_primary_key_with_unique_index_postgres.snap
---
source: crates/vespertide-query/src/sql/remove_constraint.rs
expression: sql
---
ALTER TABLE "users" DROP CONSTRAINT "users_pkey"
